docs: rebuild the site into an adoption-grade, decision-narrative reference
Researched the local-LLM landscape (Ollama, Jlama, java-llama.cpp JNI, Spring AI,
node-llama-cpp, llama.cpp server) and rewrote the site around it: a sharp in-process/
no-JNI/no-daemon positioning, a quickstart-first home, a new Why page with a six-why
decision cascade (FFM-not-JNI, prebuilt-not-source, tool-calling-only, Spring-first,
classifier-jars/jlink), a Compare page with an HONEST 6-way table (admits where Ollama/
Jlama/JNI win), and a CLI page documenting the new 0.1.6 multi-turn + sessions + --resume.
All coordinates bumped to 0.1.6; VitePress builds clean (no broken links). Custom mocha
theme + deemwar.com footer preserved.

Researched + written + reviewed via agent workflow (19 agents).